# AI-SQL-Chat-Assistant

./: README.md  app.py  main.py  myapp.py  pyproject.toml  requirements.txt  sample.ipynb  sqlite.py  student.db
