[project]
name = "searchengines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "duckdb>=1.5.4",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.14.3",
    "huggingface-hub>=1.21.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "mysql-connector-python>=9.7.0",
    "numexpr>=2.14.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "unstructured>=0.23.1",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
